--- a/veo3/css/style.css
+++ b/veo3/css/style.css
@@ -8,7 +8,12 @@ body {
   line-height: 1.6;
   margin: 0;
   padding: 20px;
-  height: 100vh;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
 }
 .container {
   max-width: 1200px;
