--- a/veo3/css/style.css
+++ b/veo3/css/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
   margin: 0;
-  padding: 0;
+  padding: 20px;
   height: 100%;
   width: 100%;
   top: 0;
