--- a/veo3/css/style.css
+++ b/veo3/css/style.css
@@ -140,9 +140,12 @@ h2 {
   padding: 5px;
   color: #fff;
   text-align: center;
-  position: relative;
+  position: fixed;
   bottom: 0;
+  left: 0;
+  right: 0;
   margin-top: 4px;
+  z-index: 99;
 }
 @media (max-width: 768px) {
   body {
