--- a/veo3/css/style.css
+++ b/veo3/css/style.css
@@ -1,9 +1,9 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
   margin: 0;
-  padding: 20px;
-  height: 100vh;
-  width: 100vw;
+  padding: 0;
+  height: 100%;
+  width: 100%;
   top: 0;
   left: 0;
   bottom: 0;
@@ -140,12 +140,9 @@ h2 {
   padding: 5px;
   color: #fff;
   text-align: center;
-  position: fixed;
+  position: relative;
   bottom: 0;
-  left: 0;
-  right: 0;
   margin-top: 4px;
-  z-index: 99;
 }
 @media (max-width: 768px) {
   body {
