--- a/veo3/css/style.css
+++ b/veo3/css/style.css
@@ -16,7 +16,7 @@ body {
   color: #f00;
   background-color: #000;
   line-height: 1.6;
-  overflow-x: none;
+  overflow-x: hidden;
 }
 .container {
   max-width: 1200px;
